--- a/smart-brain-master/package.json
+++ b/smart-brain-master/package.json
@@ -16,6 +16,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "16.16.0",
+    "npm": "6.14.13"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
